<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardRootSV" >

   <LinearLayout style="@style/CardRootLL" >

        <LinearLayout style="@style/CardBodyLL" >

            <TextView
                android:text="@string/current"
                style="@style/CardTitle" />

            <View style="@style/CardHR" />

            <ImageView
                android:id="@+id/ivBaro"
                android:layout_above="@+id/tvInfo"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:scaleType="centerInside"
                android:src="@drawable/baro_face" />
        </LinearLayout>

       

        <LinearLayout style="@style/CardBodyLL" >

            <TextView
                android:text="@string/hint"
                style="@style/CardTitle" />

            <View style="@style/CardHR" />

            <TextView
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/tvInfo"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/help"
                style="@style/CardText" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>